@@ -313,6 +313,16 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the leaf child widget that is located at the given position
+        ///
+        /// @param pos  The location where the widget will be searched, relative to the container
+        ///
+        /// @return Widget at the queried position, or nullptr when there is no widget at that location
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Widget::Ptr getWidgetAtPosition(sf::Vector2f pos) const override;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @internal
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void leftMousePressed(Vector2f pos) override;
