@@ -387,6 +387,20 @@ namespace tgui
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    Widget::Ptr Gui::getWidgetAtPosition(sf::Vector2f pos) const
+    {
+        return m_container->getWidgetAtPosition(pos);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    Widget::Ptr Gui::getWidgetBelowMouseCursor(sf::Vector2i mousePos) const
+    {
+        return getWidgetAtPosition(m_target->mapPixelToCoords({mousePos.x, mousePos.y}, m_view));
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 #ifndef TGUI_REMOVE_DEPRECATED_CODE
     bool Gui::setWidgetName(const Widget::Ptr& widget, const std::string& name)
     {
